patterns/zero-trust-network/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.39.26.7824",
      "templateHash": "11118283698773269102"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure region for deployment"
      }
    },
    "prefix": {
      "type": "string",
      "defaultValue": "demo",
      "metadata": {
        "description": "Prefix for resource naming"
      }
    },
    "tags": {
      "type": "object",
      "defaultValue": {
        "owner": "pattern-demo",
        "workload": "zero-trust-network",
        "environment": "demo",
        "ttlHours": "24"
      },
      "metadata": {
        "description": "Resource tags"
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "Virtual Network address prefix"
      }
    },
    "appGwSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "Application Gateway subnet prefix"
      }
    },
    "firewallSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.2.0/24",
      "metadata": {
        "description": "Firewall subnet prefix"
      }
    },
    "appSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.3.0/24",
      "metadata": {
        "description": "Application subnet prefix (with VNet integration delegation)"
      }
    },
    "privateEndpointSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.4.0/24",
      "metadata": {
        "description": "Private Endpoint subnet prefix"
      }
    },
    "enableWafPrevention": {
      "type": "bool",
      "defaultValue": true,
      "metadata": {
        "description": "Enable WAF in Prevention mode (vs Detection)"
      }
    },
    "deploymentTime": {
      "type": "string",
      "defaultValue": "[utcNow('u')]",
      "metadata": {
        "description": "Deployment timestamp"
      }
    }
  },
  "variables": {
    "resourceSuffix": "[format('{0}-{1}', parameters('prefix'), uniqueString(resourceGroup().id))]",
    "commonTags": "[union(parameters('tags'), createObject('deployedAt', parameters('deploymentTime'), 'pattern', 'zero-trust-network'))]",
    "vnetName": "[format('vnet-{0}', variables('resourceSuffix'))]",
    "nsgAppGwName": "[format('nsg-appgw-{0}', variables('resourceSuffix'))]",
    "nsgAppName": "[format('nsg-app-{0}', variables('resourceSuffix'))]",
    "nsgPeSubnetName": "[format('nsg-pe-{0}', variables('resourceSuffix'))]",
    "appGwName": "[format('agw-{0}', variables('resourceSuffix'))]",
    "appGwPublicIpName": "[format('pip-agw-{0}', variables('resourceSuffix'))]",
    "firewallName": "[format('fw-{0}', variables('resourceSuffix'))]",
    "firewallPublicIpName": "[format('pip-fw-{0}', variables('resourceSuffix'))]",
    "wafPolicyName": "[format('waf-{0}', variables('resourceSuffix'))]",
    "logAnalyticsName": "[format('log-{0}', variables('resourceSuffix'))]",
    "routeTableName": "[format('rt-app-{0}', variables('resourceSuffix'))]",
    "appServicePlanName": "[format('asp-{0}', variables('resourceSuffix'))]",
    "webAppName": "[format('app-{0}', uniqueString(resourceGroup().id))]",
    "privateEndpointName": "[format('pe-webapp-{0}', variables('resourceSuffix'))]",
    "privateDnsZoneName": "privatelink.azurewebsites.net"
  },
  "resources": [
    {
      "type": "Microsoft.OperationalInsights/workspaces",
      "apiVersion": "2022-10-01",
      "name": "[variables('logAnalyticsName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "sku": {
          "name": "PerGB2018"
        },
        "retentionInDays": 30
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgAppGwName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowGatewayManager",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "65200-65535",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowHTTPS",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowHTTP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgAppName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowVNetInbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgPeSubnetName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowVNetInbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2023-05-01",
      "name": "[variables('routeTableName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "routes": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-05-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "AppGatewaySubnet",
            "properties": {
              "addressPrefix": "[parameters('appGwSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppGwName'))]"
              }
            }
          },
          {
            "name": "AzureFirewallSubnet",
            "properties": {
              "addressPrefix": "[parameters('firewallSubnetPrefix')]"
            }
          },
          {
            "name": "AppIntegrationSubnet",
            "properties": {
              "addressPrefix": "[parameters('appSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
              },
              "delegations": [
                {
                  "name": "delegation",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverFarms"
                  }
                }
              ]
            }
          },
          {
            "name": "PrivateEndpointSubnet",
            "properties": {
              "addressPrefix": "[parameters('privateEndpointSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPeSubnetName'))]"
              },
              "privateEndpointNetworkPolicies": "Disabled"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppGwName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPeSubnetName'))]",
        "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies",
      "apiVersion": "2023-05-01",
      "name": "[variables('wafPolicyName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "policySettings": {
          "requestBodyCheck": true,
          "maxRequestBodySizeInKb": 128,
          "fileUploadLimitInMb": 100,
          "mode": "[if(parameters('enableWafPrevention'), 'Prevention', 'Detection')]",
          "state": "Enabled"
        },
        "managedRules": {
          "managedRuleSets": [
            {
              "ruleSetType": "OWASP",
              "ruleSetVersion": "3.2"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-05-01",
      "name": "[variables('appGwPublicIpName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[toLower(format('agw-{0}', uniqueString(resourceGroup().id)))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/applicationGateways",
      "apiVersion": "2023-05-01",
      "name": "[variables('appGwName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "sku": {
          "name": "WAF_v2",
          "tier": "WAF_v2",
          "capacity": 2
        },
        "gatewayIPConfigurations": [
          {
            "name": "appGwIpConfig",
            "properties": {
              "subnet": {
                "id": "[format('{0}/subnets/AppGatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
              }
            }
          }
        ],
        "frontendIPConfigurations": [
          {
            "name": "appGwPublicFrontendIp",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('appGwPublicIpName'))]"
              }
            }
          }
        ],
        "frontendPorts": [
          {
            "name": "port80",
            "properties": {
              "port": 80
            }
          },
          {
            "name": "port443",
            "properties": {
              "port": 443
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "appBackendPool",
            "properties": {
              "backendAddresses": [
                {
                  "fqdn": "[reference(resourceId('Microsoft.Web/sites', variables('webAppName')), '2023-01-01').defaultHostName]"
                }
              ]
            }
          }
        ],
        "backendHttpSettingsCollection": [
          {
            "name": "appBackendHttpSettings",
            "properties": {
              "port": 443,
              "protocol": "Https",
              "cookieBasedAffinity": "Disabled",
              "requestTimeout": 30,
              "pickHostNameFromBackendAddress": true,
              "probe": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/probes', variables('appGwName'), 'appHealthProbe')]"
              }
            }
          }
        ],
        "httpListeners": [
          {
            "name": "appListener",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('appGwName'), 'appGwPublicFrontendIp')]"
              },
              "frontendPort": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('appGwName'), 'port80')]"
              },
              "protocol": "Http"
            }
          }
        ],
        "requestRoutingRules": [
          {
            "name": "appRoutingRule",
            "properties": {
              "ruleType": "Basic",
              "priority": 100,
              "httpListener": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', variables('appGwName'), 'appListener')]"
              },
              "backendAddressPool": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('appGwName'), 'appBackendPool')]"
              },
              "backendHttpSettings": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', variables('appGwName'), 'appBackendHttpSettings')]"
              }
            }
          }
        ],
        "probes": [
          {
            "name": "appHealthProbe",
            "properties": {
              "protocol": "Https",
              "path": "/",
              "interval": 30,
              "timeout": 30,
              "unhealthyThreshold": 3,
              "pickHostNameFromBackendHttpSettings": true
            }
          }
        ],
        "webApplicationFirewallConfiguration": {
          "enabled": true,
          "firewallMode": "[if(parameters('enableWafPrevention'), 'Prevention', 'Detection')]",
          "ruleSetType": "OWASP",
          "ruleSetVersion": "3.2"
        },
        "firewallPolicy": {
          "id": "[resourceId('Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies', variables('wafPolicyName'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('appGwPublicIpName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "[resourceId('Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies', variables('wafPolicyName'))]",
        "[resourceId('Microsoft.Web/sites', variables('webAppName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-05-01",
      "name": "[variables('firewallPublicIpName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/azureFirewalls",
      "apiVersion": "2023-05-01",
      "name": "[variables('firewallName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "sku": {
          "name": "AZFW_VNet",
          "tier": "Standard"
        },
        "ipConfigurations": [
          {
            "name": "firewallIpConfig",
            "properties": {
              "subnet": {
                "id": "[format('{0}/subnets/AzureFirewallSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('firewallPublicIpName'))]"
              }
            }
          }
        ],
        "networkRuleCollections": [
          {
            "name": "AllowWebTraffic",
            "properties": {
              "priority": 100,
              "action": {
                "type": "Allow"
              },
              "rules": [
                {
                  "name": "AllowHTTP",
                  "protocols": [
                    "TCP"
                  ],
                  "sourceAddresses": [
                    "[parameters('appSubnetPrefix')]"
                  ],
                  "destinationAddresses": [
                    "*"
                  ],
                  "destinationPorts": [
                    "80",
                    "443"
                  ]
                }
              ]
            }
          }
        ],
        "applicationRuleCollections": [
          {
            "name": "AllowAzureServices",
            "properties": {
              "priority": 200,
              "action": {
                "type": "Allow"
              },
              "rules": [
                {
                  "name": "AllowWindowsUpdate",
                  "protocols": [
                    {
                      "protocolType": "Http",
                      "port": 80
                    },
                    {
                      "protocolType": "Https",
                      "port": 443
                    }
                  ],
                  "sourceAddresses": [
                    "[parameters('appSubnetPrefix')]"
                  ],
                  "targetFqdns": [
                    "*.microsoft.com",
                    "*.windows.com",
                    "*.azure.com"
                  ]
                }
              ]
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('firewallPublicIpName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/routeTables/routes",
      "apiVersion": "2023-05-01",
      "name": "[format('{0}/{1}', variables('routeTableName'), 'route-to-firewall')]",
      "properties": {
        "addressPrefix": "0.0.0.0/0",
        "nextHopType": "VirtualAppliance",
        "nextHopIpAddress": "[reference(resourceId('Microsoft.Network/azureFirewalls', variables('firewallName')), '2023-05-01').ipConfigurations[0].properties.privateIPAddress]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/azureFirewalls', variables('firewallName'))]",
        "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
      ]
    },
    {
      "type": "Microsoft.Web/serverfarms",
      "apiVersion": "2023-01-01",
      "name": "[variables('appServicePlanName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "sku": {
        "name": "B1",
        "tier": "Basic",
        "size": "B1",
        "family": "B",
        "capacity": 1
      },
      "kind": "linux",
      "properties": {
        "reserved": true
      }
    },
    {
      "type": "Microsoft.Web/sites",
      "apiVersion": "2023-01-01",
      "name": "[variables('webAppName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "kind": "app,linux",
      "properties": {
        "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]",
        "httpsOnly": true,
        "virtualNetworkSubnetId": "[format('{0}/subnets/AppIntegrationSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]",
        "publicNetworkAccess": "Disabled",
        "siteConfig": {
          "linuxFxVersion": "NODE|20-lts",
          "alwaysOn": true,
          "minTlsVersion": "1.2",
          "ftpsState": "Disabled",
          "http20Enabled": true,
          "vnetRouteAllEnabled": true
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateDnsZoneName')]",
      "location": "global",
      "tags": "[variables('commonTags')]"
    },
    {
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateDnsZoneName'), format('{0}-link', variables('vnetName')))]",
      "location": "global",
      "properties": {
        "registrationEnabled": false,
        "virtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateEndpoints",
      "apiVersion": "2023-05-01",
      "name": "[variables('privateEndpointName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('commonTags')]",
      "properties": {
        "subnet": {
          "id": "[format('{0}/subnets/PrivateEndpointSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
        },
        "privateLinkServiceConnections": [
          {
            "name": "webapp-connection",
            "properties": {
              "privateLinkServiceId": "[resourceId('Microsoft.Web/sites', variables('webAppName'))]",
              "groupIds": [
                "sites"
              ]
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "[resourceId('Microsoft.Web/sites', variables('webAppName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2023-05-01",
      "name": "[format('{0}/{1}', variables('privateEndpointName'), 'default')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "config1",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]",
        "[resourceId('Microsoft.Network/privateEndpoints', variables('privateEndpointName'))]"
      ]
    }
  ],
  "outputs": {
    "resourceGroupName": {
      "type": "string",
      "metadata": {
        "description": "Resource group name"
      },
      "value": "[resourceGroup().name]"
    },
    "vnetId": {
      "type": "string",
      "metadata": {
        "description": "Virtual Network ID"
      },
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
    },
    "appGatewayPublicIp": {
      "type": "string",
      "metadata": {
        "description": "Application Gateway public IP address"
      },
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('appGwPublicIpName')), '2023-05-01').ipAddress]"
    },
    "appGatewayFqdn": {
      "type": "string",
      "metadata": {
        "description": "Application Gateway FQDN"
      },
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('appGwPublicIpName')), '2023-05-01').dnsSettings.fqdn]"
    },
    "firewallPrivateIp": {
      "type": "string",
      "metadata": {
        "description": "Azure Firewall private IP address"
      },
      "value": "[reference(resourceId('Microsoft.Network/azureFirewalls', variables('firewallName')), '2023-05-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "webAppName": {
      "type": "string",
      "metadata": {
        "description": "Web App name"
      },
      "value": "[variables('webAppName')]"
    },
    "webAppHostName": {
      "type": "string",
      "metadata": {
        "description": "Web App default hostname (internal)"
      },
      "value": "[reference(resourceId('Microsoft.Web/sites', variables('webAppName')), '2023-01-01').defaultHostName]"
    },
    "webAppPrivateEndpoint": {
      "type": "string",
      "metadata": {
        "description": "Private Endpoint ID"
      },
      "value": "[resourceId('Microsoft.Network/privateEndpoints', variables('privateEndpointName'))]"
    },
    "privateDnsZoneName": {
      "type": "string",
      "metadata": {
        "description": "Private DNS Zone name"
      },
      "value": "[variables('privateDnsZoneName')]"
    },
    "wafMode": {
      "type": "string",
      "metadata": {
        "description": "WAF Policy mode"
      },
      "value": "[if(parameters('enableWafPrevention'), 'Prevention', 'Detection')]"
    },
    "deployedResources": {
      "type": "array",
      "metadata": {
        "description": "List of deployed resources"
      },
      "value": [
        {
          "type": "Microsoft.Network/virtualNetworks",
          "name": "[variables('vnetName')]",
          "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
        },
        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('nsgAppGwName')]",
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppGwName'))]"
        },
        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('nsgAppName')]",
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]"
        },
        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('nsgPeSubnetName')]",
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPeSubnetName'))]"
        },
        {
          "type": "Microsoft.Network/routeTables",
          "name": "[variables('routeTableName')]",
          "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
        },
        {
          "type": "Microsoft.Network/applicationGateways",
          "name": "[variables('appGwName')]",
          "id": "[resourceId('Microsoft.Network/applicationGateways', variables('appGwName'))]"
        },
        {
          "type": "Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies",
          "name": "[variables('wafPolicyName')]",
          "id": "[resourceId('Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies', variables('wafPolicyName'))]"
        },
        {
          "type": "Microsoft.Network/azureFirewalls",
          "name": "[variables('firewallName')]",
          "id": "[resourceId('Microsoft.Network/azureFirewalls', variables('firewallName'))]"
        },
        {
          "type": "Microsoft.Web/serverfarms",
          "name": "[variables('appServicePlanName')]",
          "id": "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]"
        },
        {
          "type": "Microsoft.Web/sites",
          "name": "[variables('webAppName')]",
          "id": "[resourceId('Microsoft.Web/sites', variables('webAppName'))]"
        },
        {
          "type": "Microsoft.Network/privateEndpoints",
          "name": "[variables('privateEndpointName')]",
          "id": "[resourceId('Microsoft.Network/privateEndpoints', variables('privateEndpointName'))]"
        },
        {
          "type": "Microsoft.Network/privateDnsZones",
          "name": "[variables('privateDnsZoneName')]",
          "id": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]"
        },
        {
          "type": "Microsoft.OperationalInsights/workspaces",
          "name": "[variables('logAnalyticsName')]",
          "id": "[resourceId('Microsoft.OperationalInsights/workspaces', variables('logAnalyticsName'))]"
        }
      ]
    },
    "deploymentTimestamp": {
      "type": "string",
      "metadata": {
        "description": "Deployment timestamp"
      },
      "value": "[parameters('deploymentTime')]"
    }
  }
}
